--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body{
+    color: white;
+    background-color: rgb(22, 27, 34);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3rem;
+    padding: 70px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button{
+    padding: 20px;
+    font-size: 1.3rem;
+    width: 6rem;
+    border-radius: 10px;
+    background-color: rgb(226, 199, 118);
+}
+h1,h2,div{
+    text-align: center;
 }
